# jxk_server_demo

./: CMakeLists.txt  README.md
api/protobuf/: login_msg.proto  message.proto
include/: boost_app.h  common.h  protobuf_app.h  redis_app.h
include/protobuf/: login_msg.pb.cc  login_msg.pb.h  message.pb.cc  message.pb.h
src/: boost_app.cpp  main.cpp  protobuf_app.cpp  redis_app.cpp
tempfiles/: boost_file
